@@ -411,12 +411,119 @@ local function gci_AddSlotDataToTable1(self, slotsTable, inventoryType, slotInde
 end
 
 
-
+--[[ Original code; RockingDice, et.al.
 function AutoCategory.HookGamepadInventory()	
 	ZO_GamepadInventoryList.AddSlotDataToTable = ZO_GamepadInventoryList_AddSlotDataToTable
 	ZO_GamepadInventoryList.sortFunction = AutoCategory_ItemSortComparator
 end
- 
+--]]
+
+-- New code; Friday-The13-rus
+function AutoCategory.HookGamepadInventory()
+	ZO_GamepadInventoryList.AddSlotDataToTable = ZO_GamepadInventoryList_AddSlotDataToTable
+	ZO_GamepadInventoryList.sortFunction = AutoCategory_ItemSortComparator
+
+	-- Hide existing Quickslot, Crafting and Furnishing categories
+	ZO_PreHook(GAMEPAD_INVENTORY, "AddFilteredBackpackCategoryIfPopulated", function (self, filterType, iconFile)
+		if filterType == ITEMFILTERTYPE_CRAFTING or filterType == ITEMFILTERTYPE_FURNISHING or filterType == ITEMFILTERTYPE_QUICKSLOT then
+			return true
+		end
+	end)
+
+	-- Update new items indicator for Supplies category (because of not it contains all inventory items)
+	ZO_PostHook(GAMEPAD_INVENTORY, "RefreshCategoryList", function(self)
+		for i = 1, self.categoryList:GetNumEntries() do
+			local category = self.categoryList:GetEntryData(i)
+			if category.filterType == nil and not category.isCurrencyEntry then
+				local hasAnyNewItems = SHARED_INVENTORY:AreAnyItemsNew(nil, nil, BAG_BACKPACK)
+				category:SetNew(hasAnyNewItems)
+			end
+		end
+	end)
+
+	-- Replase content in Supplies category by all items from inventory (like in keyboard inventory)
+	-- Supplies category is targetCategoryData.filterType == nil
+	ZO_PreHook(GAMEPAD_INVENTORY, "RefreshItemList", function (self)
+		local targetCategoryData = self.categoryList:GetTargetData()
+		if targetCategoryData.filterType == nil then
+			self.itemList:Clear()
+			if self.categoryList:IsEmpty() then return true end
+
+			local filteredDataTable = SHARED_INVENTORY:GenerateFullSlotData(nil, BAG_BACKPACK)
+			for _, slotData in pairs(filteredDataTable) do
+				local matched, categoryName, categoryPriority = AutoCategory:MatchCategoryRules(slotData.bagId, slotData.slotIndex)
+				if not matched then
+					slotData.bestItemTypeName = AutoCategory.acctSaved.appearance["CATEGORY_OTHER_TEXT"]
+					slotData.bestItemCategoryName = AutoCategory.acctSaved.appearance["CATEGORY_OTHER_TEXT"]
+					slotData.sortPriorityName = string.format("%03d%s", 999 , categoryName) 
+				else
+					slotData.bestItemTypeName = categoryName
+					slotData.bestItemCategoryName = categoryName
+					slotData.sortPriorityName = string.format("%03d%s", 100 - categoryPriority , categoryName)
+				end
+			end
+			table.sort(filteredDataTable, AutoCategory_ItemSortComparator)
+
+			local lastBestItemCategoryName
+			for i, itemData in ipairs(filteredDataTable) do
+				local entryData = ZO_GamepadEntryData:New(itemData.name, itemData.iconFile)
+				entryData:InitializeInventoryVisualData(itemData)
+
+				ZO_InventorySlot_SetType(entryData, SLOT_TYPE_GAMEPAD_INVENTORY_ITEM)
+
+				local remaining, duration = GetItemCooldownInfo(itemData.bagId, itemData.slotIndex)
+				if remaining > 0 and duration > 0 then
+					entryData:SetCooldown(remaining, duration)
+				end
+
+				if itemData.bestItemCategoryName ~= lastBestItemCategoryName then
+					lastBestItemCategoryName = itemData.bestItemCategoryName
+		
+					entryData:SetHeader(lastBestItemCategoryName)
+					self.itemList:AddEntry("ZO_GamepadItemSubEntryTemplateWithHeader", entryData)
+				else
+					self.itemList:AddEntry("ZO_GamepadItemSubEntryTemplate", entryData)
+				end
+			end
+
+			self.itemList:Commit()
+			return true
+		end
+		return false
+	end)
+
+	-- Allow to equip items from Supplies category
+	SecurePostHook(GAMEPAD_INVENTORY, "TryEquipItem", function (self, inventorySlot)
+		if not self.selectedEquipSlot then
+			local sourceBag, sourceSlot = ZO_Inventory_GetBagAndIndex(inventorySlot)
+			local function DoEquip()
+				EquipItem(sourceBag, sourceSlot)
+			end
+
+			if ZO_InventorySlot_WillItemBecomeBoundOnEquip(sourceBag, sourceSlot) then
+				local itemDisplayQuality = GetItemDisplayQuality(sourceBag, sourceSlot)
+				local itemDisplayQualityColor = GetItemQualityColor(itemDisplayQuality)
+				ZO_Dialogs_ShowPlatformDialog("CONFIRM_EQUIP_ITEM", { onAcceptCallback = DoEquip }, { mainTextParams = { itemDisplayQualityColor:Colorize(GetItemName(sourceBag, sourceSlot)) } })
+			else
+				DoEquip()
+			end
+		end
+	end)
+
+	-- Allow to quickslot items from Supplies category
+	ZO_PostHook(GAMEPAD_INVENTORY, "SwitchActiveList", function (self, listDescriptor)
+		if listDescriptor == "itemList" and self.selectedItemFilterType == nil then
+			KEYBIND_STRIP:AddKeybindButton(self.quickslotAssignKeybindStripDescriptor)
+			self:RefreshItemActions()
+			self:RefreshActiveKeybinds()
+		end
+	end)
+
+	-- Fix an issue, when set to quickslot action does not hide after selecting item that cannot be quickslotted
+	ZO_PostHook(GAMEPAD_INVENTORY, "RefreshActiveKeybinds", function (self)
+		KEYBIND_STRIP:UpdateKeybindButton(self.quickslotAssignKeybindStripDescriptor)
+	end)
+end
 
 local function gci_AddFilteredDataToList(self, filteredDataTable)
     table.sort(filteredDataTable, AutoCategory_ItemSortComparator) -- this is different
